includes/asm_parser/asm_grammarParser.cpp

// Generated from /home/fils/git/fCore_has/src/frontend/asm_grammar.g4 by ANTLR 4.9.1


#include "asm_grammarListener.h"
#include "asm_grammarVisitor.h"

#include "asm_grammarParser.h"


using namespace antlrcpp;
using namespace asm_parser;
using namespace antlr4;

asm_grammarParser::asm_grammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

asm_grammarParser::~asm_grammarParser() {
  delete _interpreter;
}

std::string asm_grammarParser::getGrammarFileName() const {
  return "asm_grammar.g4";
}

const std::vector<std::string>& asm_grammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& asm_grammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

asm_grammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::CodeContext* asm_grammarParser::ProgramContext::code() {
  return getRuleContext<asm_grammarParser::CodeContext>(0);
}


size_t asm_grammarParser::ProgramContext::getRuleIndex() const {
  return asm_grammarParser::RuleProgram;
}

void asm_grammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void asm_grammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any asm_grammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::ProgramContext* asm_grammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, asm_grammarParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    code();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeContext ------------------------------------------------------------------

asm_grammarParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<asm_grammarParser::InstructionContext *> asm_grammarParser::CodeContext::instruction() {
  return getRuleContexts<asm_grammarParser::InstructionContext>();
}

asm_grammarParser::InstructionContext* asm_grammarParser::CodeContext::instruction(size_t i) {
  return getRuleContext<asm_grammarParser::InstructionContext>(i);
}

std::vector<asm_grammarParser::For_blockContext *> asm_grammarParser::CodeContext::for_block() {
  return getRuleContexts<asm_grammarParser::For_blockContext>();
}

asm_grammarParser::For_blockContext* asm_grammarParser::CodeContext::for_block(size_t i) {
  return getRuleContext<asm_grammarParser::For_blockContext>(i);
}

std::vector<asm_grammarParser::PragmaContext *> asm_grammarParser::CodeContext::pragma() {
  return getRuleContexts<asm_grammarParser::PragmaContext>();
}

asm_grammarParser::PragmaContext* asm_grammarParser::CodeContext::pragma(size_t i) {
  return getRuleContext<asm_grammarParser::PragmaContext>(i);
}

std::vector<asm_grammarParser::DeclarationContext *> asm_grammarParser::CodeContext::declaration() {
  return getRuleContexts<asm_grammarParser::DeclarationContext>();
}

asm_grammarParser::DeclarationContext* asm_grammarParser::CodeContext::declaration(size_t i) {
  return getRuleContext<asm_grammarParser::DeclarationContext>(i);
}


size_t asm_grammarParser::CodeContext::getRuleIndex() const {
  return asm_grammarParser::RuleCode;
}

void asm_grammarParser::CodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode(this);
}

void asm_grammarParser::CodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode(this);
}


antlrcpp::Any asm_grammarParser::CodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitCode(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::CodeContext* asm_grammarParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 2, asm_grammarParser::RuleCode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(68);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case asm_grammarParser::T__1:
        case asm_grammarParser::T__2:
        case asm_grammarParser::T__3:
        case asm_grammarParser::T__4:
        case asm_grammarParser::T__5:
        case asm_grammarParser::T__6:
        case asm_grammarParser::T__7:
        case asm_grammarParser::T__8:
        case asm_grammarParser::T__9:
        case asm_grammarParser::T__10:
        case asm_grammarParser::T__11:
        case asm_grammarParser::T__12:
        case asm_grammarParser::T__13:
        case asm_grammarParser::T__14:
        case asm_grammarParser::T__15:
        case asm_grammarParser::T__16:
        case asm_grammarParser::T__17:
        case asm_grammarParser::T__18:
        case asm_grammarParser::T__19:
        case asm_grammarParser::T__20: {
          setState(64);
          instruction();
          break;
        }

        case asm_grammarParser::T__21: {
          setState(65);
          for_block();
          break;
        }

        case asm_grammarParser::T__33: {
          setState(66);
          pragma();
          break;
        }

        case asm_grammarParser::T__34:
        case asm_grammarParser::T__35:
        case asm_grammarParser::T__36:
        case asm_grammarParser::T__37: {
          setState(67);
          declaration();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << asm_grammarParser::T__1)
      | (1ULL << asm_grammarParser::T__2)
      | (1ULL << asm_grammarParser::T__3)
      | (1ULL << asm_grammarParser::T__4)
      | (1ULL << asm_grammarParser::T__5)
      | (1ULL << asm_grammarParser::T__6)
      | (1ULL << asm_grammarParser::T__7)
      | (1ULL << asm_grammarParser::T__8)
      | (1ULL << asm_grammarParser::T__9)
      | (1ULL << asm_grammarParser::T__10)
      | (1ULL << asm_grammarParser::T__11)
      | (1ULL << asm_grammarParser::T__12)
      | (1ULL << asm_grammarParser::T__13)
      | (1ULL << asm_grammarParser::T__14)
      | (1ULL << asm_grammarParser::T__15)
      | (1ULL << asm_grammarParser::T__16)
      | (1ULL << asm_grammarParser::T__17)
      | (1ULL << asm_grammarParser::T__18)
      | (1ULL << asm_grammarParser::T__19)
      | (1ULL << asm_grammarParser::T__20)
      | (1ULL << asm_grammarParser::T__21)
      | (1ULL << asm_grammarParser::T__33)
      | (1ULL << asm_grammarParser::T__34)
      | (1ULL << asm_grammarParser::T__35)
      | (1ULL << asm_grammarParser::T__36)
      | (1ULL << asm_grammarParser::T__37))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

asm_grammarParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Input_declContext* asm_grammarParser::DeclarationContext::input_decl() {
  return getRuleContext<asm_grammarParser::Input_declContext>(0);
}

asm_grammarParser::Variable_declContext* asm_grammarParser::DeclarationContext::variable_decl() {
  return getRuleContext<asm_grammarParser::Variable_declContext>(0);
}

asm_grammarParser::Constant_declContext* asm_grammarParser::DeclarationContext::constant_decl() {
  return getRuleContext<asm_grammarParser::Constant_declContext>(0);
}

asm_grammarParser::Output_declContext* asm_grammarParser::DeclarationContext::output_decl() {
  return getRuleContext<asm_grammarParser::Output_declContext>(0);
}


size_t asm_grammarParser::DeclarationContext::getRuleIndex() const {
  return asm_grammarParser::RuleDeclaration;
}

void asm_grammarParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void asm_grammarParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


antlrcpp::Any asm_grammarParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::DeclarationContext* asm_grammarParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, asm_grammarParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case asm_grammarParser::T__36: {
        setState(72);
        input_decl();
        break;
      }

      case asm_grammarParser::T__34: {
        setState(73);
        variable_decl();
        break;
      }

      case asm_grammarParser::T__35: {
        setState(74);
        constant_decl();
        break;
      }

      case asm_grammarParser::T__37: {
        setState(75);
        output_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

asm_grammarParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Reg_instrContext* asm_grammarParser::InstructionContext::reg_instr() {
  return getRuleContext<asm_grammarParser::Reg_instrContext>(0);
}

asm_grammarParser::Imm_instrContext* asm_grammarParser::InstructionContext::imm_instr() {
  return getRuleContext<asm_grammarParser::Imm_instrContext>(0);
}

asm_grammarParser::Indep_instrContext* asm_grammarParser::InstructionContext::indep_instr() {
  return getRuleContext<asm_grammarParser::Indep_instrContext>(0);
}

asm_grammarParser::Pseudo_instrContext* asm_grammarParser::InstructionContext::pseudo_instr() {
  return getRuleContext<asm_grammarParser::Pseudo_instrContext>(0);
}

asm_grammarParser::Branch_instrContext* asm_grammarParser::InstructionContext::branch_instr() {
  return getRuleContext<asm_grammarParser::Branch_instrContext>(0);
}

asm_grammarParser::Conv_instrContext* asm_grammarParser::InstructionContext::conv_instr() {
  return getRuleContext<asm_grammarParser::Conv_instrContext>(0);
}

asm_grammarParser::Load_instrContext* asm_grammarParser::InstructionContext::load_instr() {
  return getRuleContext<asm_grammarParser::Load_instrContext>(0);
}


size_t asm_grammarParser::InstructionContext::getRuleIndex() const {
  return asm_grammarParser::RuleInstruction;
}

void asm_grammarParser::InstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstruction(this);
}

void asm_grammarParser::InstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstruction(this);
}


antlrcpp::Any asm_grammarParser::InstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitInstruction(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::InstructionContext* asm_grammarParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, asm_grammarParser::RuleInstruction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case asm_grammarParser::T__4:
      case asm_grammarParser::T__5:
      case asm_grammarParser::T__6:
      case asm_grammarParser::T__7:
      case asm_grammarParser::T__8:
      case asm_grammarParser::T__9:
      case asm_grammarParser::T__10: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        reg_instr();
        break;
      }

      case asm_grammarParser::T__15: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        imm_instr();
        break;
      }

      case asm_grammarParser::T__2:
      case asm_grammarParser::T__3: {
        enterOuterAlt(_localctx, 3);
        setState(80);
        indep_instr();
        break;
      }

      case asm_grammarParser::T__20: {
        enterOuterAlt(_localctx, 4);
        setState(81);
        pseudo_instr();
        break;
      }

      case asm_grammarParser::T__16:
      case asm_grammarParser::T__17:
      case asm_grammarParser::T__18:
      case asm_grammarParser::T__19: {
        enterOuterAlt(_localctx, 5);
        setState(82);
        branch_instr();
        break;
      }

      case asm_grammarParser::T__11:
      case asm_grammarParser::T__12:
      case asm_grammarParser::T__13:
      case asm_grammarParser::T__14: {
        enterOuterAlt(_localctx, 6);
        setState(83);
        conv_instr();
        break;
      }

      case asm_grammarParser::T__1: {
        enterOuterAlt(_localctx, 7);
        setState(84);
        load_instr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Reg_instrContext ------------------------------------------------------------------

asm_grammarParser::Reg_instrContext::Reg_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Reg_opcodeContext* asm_grammarParser::Reg_instrContext::reg_opcode() {
  return getRuleContext<asm_grammarParser::Reg_opcodeContext>(0);
}

std::vector<asm_grammarParser::OperandContext *> asm_grammarParser::Reg_instrContext::operand() {
  return getRuleContexts<asm_grammarParser::OperandContext>();
}

asm_grammarParser::OperandContext* asm_grammarParser::Reg_instrContext::operand(size_t i) {
  return getRuleContext<asm_grammarParser::OperandContext>(i);
}

asm_grammarParser::DestinationContext* asm_grammarParser::Reg_instrContext::destination() {
  return getRuleContext<asm_grammarParser::DestinationContext>(0);
}


size_t asm_grammarParser::Reg_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleReg_instr;
}

void asm_grammarParser::Reg_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReg_instr(this);
}

void asm_grammarParser::Reg_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReg_instr(this);
}


antlrcpp::Any asm_grammarParser::Reg_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitReg_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Reg_instrContext* asm_grammarParser::reg_instr() {
  Reg_instrContext *_localctx = _tracker.createInstance<Reg_instrContext>(_ctx, getState());
  enterRule(_localctx, 8, asm_grammarParser::RuleReg_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    reg_opcode();
    setState(88);
    operand();
    setState(89);
    match(asm_grammarParser::T__0);
    setState(90);
    operand();
    setState(91);
    match(asm_grammarParser::T__0);
    setState(92);
    destination();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Imm_instrContext ------------------------------------------------------------------

asm_grammarParser::Imm_instrContext::Imm_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Imm_opcodeContext* asm_grammarParser::Imm_instrContext::imm_opcode() {
  return getRuleContext<asm_grammarParser::Imm_opcodeContext>(0);
}

asm_grammarParser::DestinationContext* asm_grammarParser::Imm_instrContext::destination() {
  return getRuleContext<asm_grammarParser::DestinationContext>(0);
}

asm_grammarParser::ImmediateContext* asm_grammarParser::Imm_instrContext::immediate() {
  return getRuleContext<asm_grammarParser::ImmediateContext>(0);
}


size_t asm_grammarParser::Imm_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleImm_instr;
}

void asm_grammarParser::Imm_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImm_instr(this);
}

void asm_grammarParser::Imm_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImm_instr(this);
}


antlrcpp::Any asm_grammarParser::Imm_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitImm_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Imm_instrContext* asm_grammarParser::imm_instr() {
  Imm_instrContext *_localctx = _tracker.createInstance<Imm_instrContext>(_ctx, getState());
  enterRule(_localctx, 10, asm_grammarParser::RuleImm_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    imm_opcode();
    setState(95);
    destination();
    setState(96);
    match(asm_grammarParser::T__0);
    setState(97);
    immediate();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Load_instrContext ------------------------------------------------------------------

asm_grammarParser::Load_instrContext::Load_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::DestinationContext* asm_grammarParser::Load_instrContext::destination() {
  return getRuleContext<asm_grammarParser::DestinationContext>(0);
}

tree::TerminalNode* asm_grammarParser::Load_instrContext::FloatingPointLiteral() {
  return getToken(asm_grammarParser::FloatingPointLiteral, 0);
}


size_t asm_grammarParser::Load_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleLoad_instr;
}

void asm_grammarParser::Load_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoad_instr(this);
}

void asm_grammarParser::Load_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoad_instr(this);
}


antlrcpp::Any asm_grammarParser::Load_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitLoad_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Load_instrContext* asm_grammarParser::load_instr() {
  Load_instrContext *_localctx = _tracker.createInstance<Load_instrContext>(_ctx, getState());
  enterRule(_localctx, 12, asm_grammarParser::RuleLoad_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(asm_grammarParser::T__1);
    setState(100);
    destination();
    setState(101);
    match(asm_grammarParser::T__0);
    setState(102);
    match(asm_grammarParser::FloatingPointLiteral);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Branch_instrContext ------------------------------------------------------------------

asm_grammarParser::Branch_instrContext::Branch_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Branch_opcodeContext* asm_grammarParser::Branch_instrContext::branch_opcode() {
  return getRuleContext<asm_grammarParser::Branch_opcodeContext>(0);
}

std::vector<asm_grammarParser::OperandContext *> asm_grammarParser::Branch_instrContext::operand() {
  return getRuleContexts<asm_grammarParser::OperandContext>();
}

asm_grammarParser::OperandContext* asm_grammarParser::Branch_instrContext::operand(size_t i) {
  return getRuleContext<asm_grammarParser::OperandContext>(i);
}


size_t asm_grammarParser::Branch_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleBranch_instr;
}

void asm_grammarParser::Branch_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBranch_instr(this);
}

void asm_grammarParser::Branch_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBranch_instr(this);
}


antlrcpp::Any asm_grammarParser::Branch_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitBranch_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Branch_instrContext* asm_grammarParser::branch_instr() {
  Branch_instrContext *_localctx = _tracker.createInstance<Branch_instrContext>(_ctx, getState());
  enterRule(_localctx, 14, asm_grammarParser::RuleBranch_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    branch_opcode();
    setState(105);
    operand();
    setState(106);
    match(asm_grammarParser::T__0);
    setState(107);
    operand();
    setState(108);
    match(asm_grammarParser::T__0);
    setState(109);
    operand();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Conv_instrContext ------------------------------------------------------------------

asm_grammarParser::Conv_instrContext::Conv_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

asm_grammarParser::Conv_opcodeContext* asm_grammarParser::Conv_instrContext::conv_opcode() {
  return getRuleContext<asm_grammarParser::Conv_opcodeContext>(0);
}

std::vector<asm_grammarParser::OperandContext *> asm_grammarParser::Conv_instrContext::operand() {
  return getRuleContexts<asm_grammarParser::OperandContext>();
}

asm_grammarParser::OperandContext* asm_grammarParser::Conv_instrContext::operand(size_t i) {
  return getRuleContext<asm_grammarParser::OperandContext>(i);
}


size_t asm_grammarParser::Conv_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleConv_instr;
}

void asm_grammarParser::Conv_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConv_instr(this);
}

void asm_grammarParser::Conv_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConv_instr(this);
}


antlrcpp::Any asm_grammarParser::Conv_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitConv_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Conv_instrContext* asm_grammarParser::conv_instr() {
  Conv_instrContext *_localctx = _tracker.createInstance<Conv_instrContext>(_ctx, getState());
  enterRule(_localctx, 16, asm_grammarParser::RuleConv_instr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    conv_opcode();
    setState(112);
    operand();
    setState(113);
    match(asm_grammarParser::T__0);
    setState(114);
    operand();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Indep_instrContext ------------------------------------------------------------------

asm_grammarParser::Indep_instrContext::Indep_instrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t asm_grammarParser::Indep_instrContext::getRuleIndex() const {
  return asm_grammarParser::RuleIndep_instr;
}

void asm_grammarParser::Indep_instrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIndep_instr(this);
}

void asm_grammarParser::Indep_instrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<asm_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIndep_instr(this);
}


antlrcpp::Any asm_grammarParser::Indep_instrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<asm_grammarVisitor*>(visitor))
    return parserVisitor->visitIndep_instr(this);
  else
    return visitor->visitChildren(this);
}

asm_grammarParser::Indep_instrContext* asm_grammarParser::indep_instr() {
  Indep_instrContext *_localctx = _tracker.createInstance<Indep_instrContext>(_ctx, getState());
  enterRule(_localctx, 18, asm_grammarParser::RuleIndep_instr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _la = _input->LA(1);
    if (!(_la == asm_grammarParser::T__2
